--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "enzyme-to-json": "^3.3.3",
     "flow-bin": "^0.68.0",
     "normalize.css": "^8.0.0",
+    "nunjucks": "^3.1.2",
     "prettier": "^1.11.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
