--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.3",
     "flow-bin": "^0.68.0",
+    "neat-csv": "^2.1.0",
     "normalize.css": "^8.0.0",
     "nunjucks": "^3.1.2",
     "prettier": "^1.11.1",
